# Library_for_voice

./: .gitattributes  .gitignore  llm_test.py  readme.md  stt_test.py  tts_test.py
llm_sdk/: __init__.py  client.py  pyproject.toml
llm_sdk/llm_service.egg-info/: PKG-INFO  SOURCES.txt
orpheus_tts/: __init__.py  client.py  cluster.py  metrics.py  sdk.py  types.py
orpheus_tts/orpheus_tts.egg-info/: PKG-INFO  SOURCES.txt
orpheus_tts_service/: app.py  config.py
orpheus_tts_service/routers/: admin.py  tts.py
snac_worker/: app.py  decoder.py  download_model.py  engine_class.py  quantize_awq.py  requirements.txt
stt_sdk/: __init__.py  pyprojects.toml  readme.md  setup.py  stt_sdk.py
stt_sdk/stt_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
stt_service/: .gitignore  config_loader.py  readme.md  requirements.txt  stt_fallback.env  stt_fallback.py  stt_primary.env  stt_primary.py
stt_service/models/ct2_model/: config.json
tts_sdk/: client.py  cluster.py  prom.py  pyproject.toml  sdk.py
tts_service/: app.py  auth.py  rate_limiter.py  run.py
tts_service/routers/: admin.py  tts.py
